--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset=”UTF-8">
 <meta name=”viewport” content=”width=device-width, initial-scale=1">
-<link rel=”stylesheet” type=”text/css” href=”//petstore.swagger.io/swagger-ui.css”>
+<link rel=”stylesheet” type=”text/css” href=”https://petstore.swagger.io/swagger-ui.css”>
 <title>OpenAPI Petstore</title>
 <body>
 <div id=”openapi”>
-<script src=”//petstore.swagger.io/swagger-ui-bundle.js”></script>
+<script src=”https://petstore.swagger.io/swagger-ui-bundle.js”></script>
 <script>
 window.onload = function () {
   const ui = SwaggerUIBundle({
