--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang=”en”>
+<html lang="en">
 <head>
-<meta charset=”UTF-8">
-<meta name=”viewport” content=”width=device-width, initial-scale=1">
-<link rel=”stylesheet” type=”text/css” href=”https://petstore.swagger.io/swagger-ui.css”>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css">
 <title>OpenAPI Petstore</title>
 <body>
-<div id=”openapi”>
-<script src=”https://petstore.swagger.io/swagger-ui-bundle.js”></script>
+<div id="openapi">
+<script src="https://petstore.swagger.io/swagger-ui-bundle.js"></script>
 <script>
 window.onload = function () {
   const ui = SwaggerUIBundle({
-    url: “openapi.yaml”,
-    dom_id: “#openapi”
+    url: "openapi.yaml",
+    dom_id: "#openapi"
   })
 }
 </script>
