layout in huisstijl Rijksoverheid

--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css">
-<title>OpenAPI Petstore</title>
+<link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css"/>
+<link rel="stylesheet" type="text/css" href="css/custom.css"/>
+<link rel="shortcut icon" href="https://www.logius.nl/favicon.ico" />
+<title>OpenAPI Zoekdienst Samenwerkende Catalogi</title>
 <body>
-<div id="openapi">
+<div id="mainwrapper">
+    <div id="header">
+
+        <div class="logo">
+            <div class="wrapper">
+                <img src="images/beeldmerk-rijksoverheid.svg" alt="Logo Rijksoverheid" id="logotype" />
+            </div>
+        </div>
+
+        <div class="titlebar">
+            <div class="wrapper">Zoekdienst - Samenwerkende Catalogi</div>
+        </div>
+
+        <div id="search">
+            <div class="wrapper">
+
+            </div>
+        </div>
+    </div>
+
+    <div id="openapi">
+    </div>
+
+    <div id="footer" class="three-column">
+        <div class="wrapper">
+            <div class="column">
+                <h2>Over deze site</h2>
+                <ul>
+                    <li>
+                        <a href="https://www.logius.nl/sites/default/files/public/bestanden/toegankelijkheid/Verklaring-scvalidatorlogius.nl-20190919.html">Toegankelijkheid</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</div>
 <script src="https://petstore.swagger.io/swagger-ui-bundle.js"></script>
 <script>
 window.onload = function () {
