Globale documentatie pre-feedback

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             </div>
         </div>
 
+        <div class="intro">
+            <div class="wrapper">
+                <p>De Zoekdienst kan bevraagd worden met <a href="https://logius.nl/domeinen/interactie/samenwerkende-catalogi/documentatie/informatie-publicatie-model#techniek-bevraging-van-de-landelijke-virtuele-catalogus-middels-api">
+                    CQL queries</a>. De REST request/response staan hieronder beschreven volgens OpenAPI. Meer informatie over het opbouwen van een CQL
+                query is te vinden op de bijbehorende <a href="https://github.com/zoekdienst-sc/zoekdienst-sc.github.io">GitHub pagina</a>.</p>
+            </div>
+        </div>
+
         <div class="titlebar">
             <div class="wrapper">Zoekdienst - Samenwerkende Catalogi</div>
         </div>
